# Shinobu

./: .env.example  .flaskenv  .gitignore  Dockerfile  README.md  docker-compose.yml  main.js  main.py  package-lock.json  package.json  pyproject.toml  start.sh  wsgi.py
.github/workflows/: build-docker.yml
ndrabot/: __init__.py  config.py  webhook.py  webui.py
ndrabot/functions/: media.py  message.py
ndrabot/functions/handlers/: dadjoke.py  defaults.py  instagram_dl.py  quotes.py  sticker.py  youtube_dl.py
ndrabot/utils/: detect_website.py  messages.py
shinobu/: __init__.py  config.py  webhook.py  webui.py
shinobu/functions/: media.py  message.py
shinobu/functions/handlers/: dadjoke.py  defaults.py  instagram_dl.py  quotes.py  sticker.py  youtube_dl.py
shinobu/templates/: base.html  home.html
shinobu/utils/: detect_website.py  messages.py
src/: messageHandler.js
src/functions/: image2sticker.js
